tests/non-exhaustive-patterns.chg.stderr

                                            throw new Error(`no check block to jump to if arm ${i} fails`);
                                            ^

Error: no check block to jump to if arm 1 fails












